<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/current_available_device" />

                <EditText
                    android:id="@+id/text_notify_device"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/mandatory"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_package_name" />

                <EditText
                    android:id="@+id/edit_notify_package_name"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/mandatory"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_title" />

                <EditText
                    android:id="@+id/edit_notify_title"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/mandatory"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_content" />

                <EditText
                    android:id="@+id/edit_notify_content"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/mandatory"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_template" />

                <EditText
                    android:id="@+id/edit_notify_template"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/optional_button_style"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_button_first" />

                <EditText
                    android:id="@+id/edit_notify_button_one"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/optional"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_button_second" />

                <EditText
                    android:id="@+id/edit_notify_button_two"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/optional"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout style="@style/NotificationActivityLinearLayout">

                <TextView
                    style="@style/NotificationActivityTextView"
                    android:text="@string/notify_button_third" />

                <EditText
                    android:id="@+id/edit_notify_button_three"
                    style="@style/NotificationActivityEditText"
                    android:hint="@string/optional"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sendNotification"
                    android:text="@string/notify_send"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_weight="1"
                    android:onClick="clearResult"
                    android:text="@string/clear_log"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@android:drawable/edit_text">

            <TextView
                android:id="@+id/result_shows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10"
                android:scrollbars="vertical"
                android:text="@string/log_output" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>