<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_available_device"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/sensor_list_title"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/sensor_radio_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_133"
                android:background="@android:drawable/edit_text"
                android:orientation="vertical" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="getSensorList"
                android:padding="@dimen/dp_10"
                android:text="@string/sensor_list_text"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="asyncReadSensorData"
                android:text="@string/sync_read_sensor_data"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="stopReadSensorData"
                android:padding="@dimen/dp_5"
                android:text="@string/stop_read_sensor_data"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="clearResult"
                android:padding="@dimen/dp_5"
                android:text="@string/clear_log"
                android:textAllCaps="false" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@android:drawable/edit_text">

            <TextView
                android:id="@+id/result_shows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10"
                android:scrollbars="vertical"
                android:text="@string/log_output" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>