<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.cash.WithdrawOrderResultActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/withdrawOrderResultActivityMt"
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_font_input_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/handleResult"
            android:textColor="@color/fontInput"
            android:textSize="@dimen/sp_16" />
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/withdrawOrderResultActivityView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/withdrawOrderResultActivityMt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/withdrawOrderResultActivityView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_40"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toDo"
                    app:srcCompat="@drawable/ic_check_circle_color_6aaeff_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:text="@string/appointmentSubmitSuccessful"
                    android:textColor="@color/fontInput"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:text="@string/appointmentSubmitSuccessfulContent"
                    android:textColor="@color/fontInput"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:background="@color/pageBackground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointmentNumber"
                    android:textColor="@color/fontInput"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/appointmentNumberContent"
                    android:textColor="@color/color_FF9502"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:background="@color/pageBackground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="@dimen/dp_20">

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/businessHours"
                    android:textColor="@color/fontHint"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/businessHoursContent"
                    android:textColor="@color/fontInput"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px1"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="@dimen/dp_20">

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@color/fontHint"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/phoneContent"
                    android:textColor="@color/fontInput"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pageBackground"
                android:lineSpacingExtra="@dimen/dp_6"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_40"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_70"
                android:text="@string/kindlyReminder"
                android:textColor="@color/fontHint"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/withdrawOrderResultActivityTvReturnHomepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20"
                android:text="@string/returnHomepage"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>